2004-05-10  Stephen J. Turnbull  <stephen@xemacs.org>

	* isearch-mode.el (isearch-forward, isearch-abort): Document that our
	behavior of `isearch-abort' differs from that of GNU Emacs.

2004-05-08  Sven Grundmann  <sven@xemacs.org>

	* etags.el:
	* etags.el (tags-exuberant-ctags-optimization-p): Enable optimization
	only for use with exuberant ctags. This will also enable building of 
	completion tables with exuberant ctags. This will not work with
	xemacs ctags. New.
	* etags.el (get-tag-table-buffer): New function for creating of
	completion table is used if tags-exuberant-ctags-optimization-p ist t
	* etags.el (add-to-tag-completion-table-exuberant-ctags): Defun for
	building tag completion table with exuberant ctags. New.
	* etags.el (find-tag-internal): Improve exact tag matching for tags
	with name fields. Before the patch return types of functions or
	function parameters (with exuberant ctags) were found as matches.

2004-04-20  Malcolm Purvis  <malcolmpurvis@optushome.com.au>

 	* gtk-marshal.el: Return type for INT is gint, not guint.

2004-02-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* isearch-mode.el (isearch-abort): Preserve successful search target.

2004-04-19  Stephen J. Turnbull  <turnbull@sk.tsukuba.ac.jp>

	* startup.el (site-start-file):
	(load-init-file):
	Improve documentation.

2004-04-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* menubar-items.el (default-menubar): Options are saved to custom.el.

2004-04-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* help.el (help-register-and-maybe-prune-excess): Trim docstring.
	Sanity check argument.
	(with-displaying-temp-buffer): Improve docstring.

2004-04-09  Stephen J. Turnbull  <turnbull@sk.tsukuba.ac.jp>

	* files.el (revert-buffer): Synch to 21.4.  Suggested by
	Rodney Sparapani <rsparapa@post.its.mcw.edu>.

2004-04-09  Mike Sperber  <mike@xemacs.org>

	* minibuf.el (reset-buffer): Zap the mark of the minibuffer as
	well, to prevent it from hijacking other buffers' marks when