@@ -1,3 +1,7 @@
+2004-05-08  Vin Shelton  <acs@xemacs.org>
+
+	* automated/tag-test.el: Created.
+
 2004-04-21  Jerry James  <james@xemacs.org>
 
 	* automated/test-harness.el (Assert): Add an optional failing-case
