@@ -1,3 +1,11 @@
+2004-04-30  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* cl.el (gensym, gentemp): Improve docstrings.
+
+2004-05-11  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* code-init.el (set-eol-detection): Special-case 'no-conversion.
+
 2004-05-10  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* isearch-mode.el (isearch-forward, isearch-abort): Document that our
